fixed gap

--- a/src/app/pages/education-infomation/education-infomation.component.scss
+++ b/src/app/pages/education-infomation/education-infomation.component.scss
@@ -1,3 +1,14 @@
 .form-field{
     width: 100%;
 }
+
+.major{
+    display: flex;
+    gap:3rem;
+}
+
+.navigation-buttons{
+    padding: 1rem;
+    display: flex;
+    gap:1rem
+}
